--- a/_posts/2021-06-28-0628-0704.md
+++ b/_posts/2021-06-28-0628-0704.md
@@ -1,12 +1,13 @@
 ---
-title: "0628-0704"
+title: "0628 - 0704"
 tag: TIL
 category: TIL
+excerpt: ""
 ---
+
 ## 0628
+
 # 패스트캠퍼스 네카라쿠배 취업스쿨 2차 합격
-
-
 
 예상치도 못한 결과를 받았다.  
 기대 반, 체념 반으로 합격메일을 기다리며 받은 결과 통지서에는 합격이라는 글자가 쓰여있었다.  
@@ -17,18 +18,21 @@ category: TIL
 남은 기간동안 최선을 다해서 후회없이 부딪혀 봐야겠다.
 
 ## 0629 ~ 0630
+
 이틀 간 면접 준비를 해서 면접을 치뤘다.  
 처음으로 제대로 준비한 면접이다보니 엄청 떨려서 내 마음껏 표현을 하지 못한 것 같다.  
 제대로 간절함을 나타내지 못해서 아쉬움이 정말 크다.  
 현실적으로 봤을 때 떨어질 확률이 높다고 생각한다.  
-합격하지 못하더라도 다시 새로운 마음가짐으로 시작해야겠다.  
+합격하지 못하더라도 다시 새로운 마음가짐으로 시작해야겠다.
 
 ## 0701
+
 새로운 달의 시작이다.  
 오늘은 지금까지 네카라쿠배 패스트캠퍼스를 준비하느라 휴식하는 기간을 가졌다.  
 결과가 나올 떄까지 코딩테스트를 준비해야겠다.  
 우선은 파이썬을 사용해서 코딩테스트를 준비해봐야겠다.
 
 ## 0702 ~ 0704
+
 이번 결과 발표에 따라 앞으로 공부 방향이 완전히 달라지기 때문에 생각이 많아져 학업이 손에 잡히지 않았다.  
 결과 발표까지는 휴식기를 가질 생각이다.
