--- a/_posts/2021-04-21-0419-0425.md
+++ b/_posts/2021-04-21-0419-0425.md
@@ -1,12 +1,16 @@
 ---
-title: "0419-0425"
+title: "0419 - 0425"
 tag: TIL
 category: TIL
+excerpt: ""
 ---
+
 ## 0419 ~ 0423
+
 중간고사 기간
 
 ## 0424
+
 중간고사를 마무리 하고 다시 프로젝트를 이어서 진행하였다. api를 사용하는 영역을 모듈화 하고 인터셉터로 처리하였다.
 
 ### 인터셉터
@@ -17,25 +21,25 @@ import store from "@/store/index";
 
 export function setInterceptors(axiosService) {
   axiosService.interceptors.request.use(
-    function(config) {
+    function (config) {
       // 요청을 보내기 전에 어떤 처리를 할 수 있다.
       config.headers.Authorization = `Bearer ${store.state.member.token}`;
       console.log(config);
       return config;
     },
-    function(error) {
+    function (error) {
       // 요청이 잘못되었을 때, 에러가 컴포넌트 단으로 오기 전에 어떤 처리를 할 수 있다.
       return Promise.reject(error);
     }
   );
 
   axiosService.interceptors.response.use(
-    function(response) {
+    function (response) {
       // 요청을 보내고 나서 응답을 받기 전에 어떤 처리를 할 수 있다.
       console.log(response);
       return response;
     },
-    function(error) {
+    function (error) {
       // 응답이 에러인 경우 미리 처리할 수 있다.
       return Promise.reject(error);
     }
@@ -44,9 +48,10 @@ export function setInterceptors(axiosService) {
   return axiosService;
 }
 ```
-* 인터셉터를 이용하면 HTTP 요청과 응답을 컴포넌트 단에서 처리하기 전에 추가 로직을 넣을 수 있다.
-* 요청하기 전에 헤더의 권한에 스토어에 저장된 토큰 값을 설정하였다.
-* 요청과 응답 모두 결과를 확인하기 위해 console.log로 찍어보았다.
+
+- 인터셉터를 이용하면 HTTP 요청과 응답을 컴포넌트 단에서 처리하기 전에 추가 로직을 넣을 수 있다.
+- 요청하기 전에 헤더의 권한에 스토어에 저장된 토큰 값을 설정하였다.
+- 요청과 응답 모두 결과를 확인하기 위해 console.log로 찍어보았다.
 
 ### 모듈화
 
@@ -57,13 +62,13 @@ import { setInterceptors } from "./common/interceptors";
 
 function createAxiosService() {
   return axios.create({
-    baseURL: process.env.VUE_APP_API_URL
+    baseURL: process.env.VUE_APP_API_URL,
   });
 }
 
 function createAxiosServiceWithAuth() {
   const axiosService = axios.create({
-    baseURL: process.env.VUE_APP_API_URL
+    baseURL: process.env.VUE_APP_API_URL,
   });
 
   return setInterceptors(axiosService);
@@ -72,8 +77,9 @@ function createAxiosServiceWithAuth() {
 export const axiosService = createAxiosService();
 export const axiosServiceWithAuth = createAxiosServiceWithAuth();
 ```
-* 모듈화를 하기 위해 공통으로 설정할 index.js를 작성하였다.
-* axiosService는 기본 api 호출을 위한 것이고, axiosServiceWithAuth는 인터셉터를 거쳐서 토큰을 권한에 설정하여 로그인이 필요한 api를 호출하기 위해 구분한 것이다.
+
+- 모듈화를 하기 위해 공통으로 설정할 index.js를 작성하였다.
+- axiosService는 기본 api 호출을 위한 것이고, axiosServiceWithAuth는 인터셉터를 거쳐서 토큰을 권한에 설정하여 로그인이 필요한 api를 호출하기 위해 구분한 것이다.
 
 ```javascript
 // member.js
@@ -98,10 +104,13 @@ const getBoardList = data => {
 
 export default { getBoardList };
 ```
-* 위와 같이 index.js만 import하여 코드가 훨씬 간결해지고 깔끔해졌다.
+
+- 위와 같이 index.js만 import하여 코드가 훨씬 간결해지고 깔끔해졌다.
 
 ## 0425
+
 # 로그인, 로그아웃
+
 vuex만 사용하면 새로고침 시 저장된 state가 초기화 되기 때문에 쿠키를 사용해서 기능을 구현하였다.
 
 ```javascript
@@ -126,9 +135,10 @@ function deleteCookie(value) {
 
 export { getAuthFromCookie, getMemberNameFromCookie, deleteCookie };
 ```
-* utils에 쿠키와 관련된 함수를 작성하였다.
-* get 관련 함수는 백엔드 서버단에서 생성해준 쿠키를 반환하는 함수이다.
-* deleteCookie는 값을 매개변수로 받아서 해당하는 쿠키를 삭제한다.
+
+- utils에 쿠키와 관련된 함수를 작성하였다.
+- get 관련 함수는 백엔드 서버단에서 생성해준 쿠키를 반환하는 함수이다.
+- deleteCookie는 값을 매개변수로 받아서 해당하는 쿠키를 삭제한다.
 
 ```javascript
 // store/module/member.js
@@ -136,18 +146,18 @@ import memberService from "@/api/member";
 import {
   getAuthFromCookie,
   getMemberNameFromCookie,
-  deleteCookie
+  deleteCookie,
 } from "@/utils/cookies";
 
 export const member = {
   state: {
     token: getAuthFromCookie() || "",
-    memberName: getMemberNameFromCookie() || ""
+    memberName: getMemberNameFromCookie() || "",
   },
   getters: {
     isLogin(state) {
       return state.memberName !== "";
-    }
+    },
   },
   actions: {
     async register({ commit }, member) {
@@ -159,7 +169,7 @@ export const member = {
       commit("setToken", getAuthFromCookie());
       commit("setMemberName", getMemberNameFromCookie());
       return result;
-    }
+    },
   },
   mutations: {
     setToken(state, token) {
@@ -172,18 +182,19 @@ export const member = {
       (state.token = ""), (state.memberName = "");
       deleteCookie("jwt");
       deleteCookie("memberName");
-    }
-  }
+    },
+  },
 };
 ```
 
-* 회원과 관련된 store이다.
-* 로그인 시 login api를 호출하여 백엔드 서버 단에서 쿠키에 토큰 값과 회원 이름을 저장해준다.
-* setToken과 setMemberName을 호출하여 쿠키에서 값을 꺼내와 state에 저장해준다.
-* 새로고침을 해도 token과 memberName은 쿠키에서 값을 꺼내오기 때문에 값이 초기화되지 않아서 상태를 유지한다.
-* 로그아웃 시에는 state와 쿠키 값을 삭제하고 login 페이지로 이동한다.
+- 회원과 관련된 store이다.
+- 로그인 시 login api를 호출하여 백엔드 서버 단에서 쿠키에 토큰 값과 회원 이름을 저장해준다.
+- setToken과 setMemberName을 호출하여 쿠키에서 값을 꺼내와 state에 저장해준다.
+- 새로고침을 해도 token과 memberName은 쿠키에서 값을 꺼내오기 때문에 값이 초기화되지 않아서 상태를 유지한다.
+- 로그아웃 시에는 state와 쿠키 값을 삭제하고 login 페이지로 이동한다.
 
 ## 비로그인 시 url로 접근 제한
+
 권한이 없는 경우에도 url로 페이지에 접근하는 것을 막기 위해 router에서 설정할 수 있다.
 
 ```javascript
@@ -197,30 +208,30 @@ Vue.use(VueRouter);
 const routes = [
   {
     path: "/",
-    redirect: "/login"
+    redirect: "/login",
   },
   {
     path: "/login",
     name: "Login",
-    component: () => import("@/views/Login.vue")
+    component: () => import("@/views/Login.vue"),
   },
   {
     path: "/signup",
     name: "Signup",
-    component: () => import("@/views/Signup.vue")
+    component: () => import("@/views/Signup.vue"),
   },
   {
     path: "/main",
     name: "Main",
     component: () => import("@/views/Main.vue"),
-    meta: { auth: true }
-  }
+    meta: { auth: true },
+  },
 ];
 
 const router = new VueRouter({
   mode: "history",
   base: process.env.BASE_URL,
-  routes
+  routes,
 });
 
 router.beforeEach((to, from, next) => {
@@ -234,7 +245,8 @@ router.beforeEach((to, from, next) => {
 
 export default router;
 ```
-* beforeEach는 라우터 네비게이션 가드로 라우팅이 발생하기 전에 실행되는 코드이다.
-* to는 이동하려는 페이지, from은 현재 페이지, next는 다음 페이지로 이동할 수 있도록 호출하는 API이다.
-* 접근 권한이 필요한 페이지에 meta 속성을 사용해 정의한다.
-* meta 속성과 실제로 권한이 있는지를 확인해서 접근 권한이 필요한 페이지에 권한이 없다면 alert창으로 오류 메시지를 띄우고 login 창으로 이동하는 코드이다.
+
+- beforeEach는 라우터 네비게이션 가드로 라우팅이 발생하기 전에 실행되는 코드이다.
+- to는 이동하려는 페이지, from은 현재 페이지, next는 다음 페이지로 이동할 수 있도록 호출하는 API이다.
+- 접근 권한이 필요한 페이지에 meta 속성을 사용해 정의한다.
+- meta 속성과 실제로 권한이 있는지를 확인해서 접근 권한이 필요한 페이지에 권한이 없다면 alert창으로 오류 메시지를 띄우고 login 창으로 이동하는 코드이다.
