--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -1,12 +1,13 @@
 ---
-title: "0426-0502"
+title: "0426 - 0502"
 tag: TIL
 category: TIL
+excerpt: ""
 ---
+
 ## 0426
+
 # 게시글 작성 페이지 구현
-
-
 
 게시글 작성 페이지는 상단의 header와 게시글 제목과 내용을 작성할 form으로 나누어서 구현하였다.  
 이를 구현하면서 고민했던 내용 중 하나는 서로 다른 컴포넌트에서 어떻게 작성 버튼을 눌렀을 때, form에 있는 내용을 보낼까 하는 것이었다.
@@ -40,8 +41,8 @@ import { mapState, mapMutations } from "vuex";
 export default {
   computed: {
     ...mapState({
-      memberName: state => state.member.memberName
-    })
+      memberName: (state) => state.member.memberName,
+    }),
   },
   methods: {
     ...mapMutations(["logout"]),
@@ -51,7 +52,7 @@ export default {
       );
       if (result) {
         this.logout();
-          this.$router.push("/login");
+        this.$router.push("/login");
       }
     },
     addPostMethod() {
@@ -64,15 +65,16 @@ export default {
       if (result) {
         this.$router.push("/main");
       }
-    }
-  }
+    },
+  },
 };
 </script>
 
 <style scoped src="../../assets/css/post/header.css"></style>
 ```
-* 페이지를 이동하는 메소드가 실행되었을 경우에는 confirm으로 확인함으로써 의도치 않게 작성하던 글이 날라가지 않도록 설정하였다.
-* PostHeader와 PostForm은 모두 Post의 자식 컴포넌트이므로 작성 버튼 클릭 시 $emit 이벤트를 전달하였다.
+
+- 페이지를 이동하는 메소드가 실행되었을 경우에는 confirm으로 확인함으로써 의도치 않게 작성하던 글이 날라가지 않도록 설정하였다.
+- PostHeader와 PostForm은 모두 Post의 자식 컴포넌트이므로 작성 버튼 클릭 시 $emit 이벤트를 전달하였다.
 
 ```vue
 <!-- Post.vue -->
@@ -89,17 +91,18 @@ import PostForm from "@/components/post/PostForm.vue";
 export default {
   components: {
     PostHeader,
-    PostForm
+    PostForm,
   },
   methods: {
     addPost() {
       this.$refs.postForm.addPostMethod();
-    }
-  }
+    },
+  },
 };
 </script>
 ```
-* addPost를 이벤트로 받아서 PostForm을 ref로 지정하여 자식 컴포넌트에 있는 addPostMethod 메소드를 실행시켰다.
+
+- addPost를 이벤트로 받아서 PostForm을 ref로 지정하여 자식 컴포넌트에 있는 addPostMethod 메소드를 실행시켰다.
 
 ```vue
 <!-- PostForm.vue -->
@@ -137,7 +140,7 @@ export default {
   data() {
     return {
       title: "",
-      content: ""
+      content: "",
     };
   },
   methods: {
@@ -146,7 +149,7 @@ export default {
       try {
         const post = {
           title: this.title,
-          content: this.content
+          content: this.content,
         };
         const result = await this.addPost(post);
         console.log(result);
@@ -155,14 +158,16 @@ export default {
         console.log(error.response);
         alert(error.response.data.message);
       }
-    }
-  }
+    },
+  },
 };
 </script>
 ```
-* 부모 컴포넌트로부터 메소드를 실행시켜서 vuex의 action 메소드를 통해 title과 content를 전달해서 게시글을 추가하는 기능을 완성시켰다.
+
+- 부모 컴포넌트로부터 메소드를 실행시켜서 vuex의 action 메소드를 통해 title과 content를 전달해서 게시글을 추가하는 기능을 완성시켰다.
 
 ## 0427
+
 # CORS 문제 해결
 
 클라이언트 단에서 Authorization 헤더에 토큰 값을 넣어 보내는 구현 방식을 선택하였는데, 계속되는 CORS 문제로 인해서 정상 작동 하지 않았다.
@@ -187,10 +192,11 @@ public class WebConfiguration implements WebMvcConfigurer {
   }
 }
 ```
-* WebConfiguration은 CORS와 관련된 로직 및 인터셉터를 관리하는 클래스인데, 기본적인 설정을 해뒀음에도 불구하고 CORS 문제가 발생하는 데는 특별한 이유가 있다는 생각이 들었다.
-* bearerAuthInterceptor는 토큰과 관련된 로직을 담당하는 인터셉터 영역인데, 인증이 필요없는 /members로 호출하는 api만 제외시키고 모두 이 영역을 거쳐야 한다.
-* 검색을 하면서 여러 글들을 읽어보고 시도해봤지만 되지 않는 것으로 봐서는 bearerAuthInterceptor를 거치는 내부 로직에서 문제가 있다고 판단하였다.
-* OPTIONS 예비 메소드가 넘어올 때도 인터셉터를 거쳐서 에러가 발생하는 것이 아닐까? 하고 생각하여 OPTIONS 메서드의 경우 true 값을 반환하도록 설정하니 제대로 동작하였다.
+
+- WebConfiguration은 CORS와 관련된 로직 및 인터셉터를 관리하는 클래스인데, 기본적인 설정을 해뒀음에도 불구하고 CORS 문제가 발생하는 데는 특별한 이유가 있다는 생각이 들었다.
+- bearerAuthInterceptor는 토큰과 관련된 로직을 담당하는 인터셉터 영역인데, 인증이 필요없는 /members로 호출하는 api만 제외시키고 모두 이 영역을 거쳐야 한다.
+- 검색을 하면서 여러 글들을 읽어보고 시도해봤지만 되지 않는 것으로 봐서는 bearerAuthInterceptor를 거치는 내부 로직에서 문제가 있다고 판단하였다.
+- OPTIONS 예비 메소드가 넘어올 때도 인터셉터를 거쳐서 에러가 발생하는 것이 아닐까? 하고 생각하여 OPTIONS 메서드의 경우 true 값을 반환하도록 설정하니 제대로 동작하였다.
 
 ```java
 public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
@@ -202,10 +208,13 @@ public boolean preHandle(HttpServletRequest request, HttpServletResponse respons
 ```
 
 ## 0428
+
 # 페이징 처리
+
 로그인을 하면 첫 화면에 존재하는 게시글의 목록이 나타나는데, 10개 씩 묶어서 페이징 처리를 하기 위한 작업을 했다.
 
 ## Pagination.vue 작성
+
 페이징 처리를 할 때 사용할 부분을 컴포넌트화 했다.
 
 ```vue
@@ -220,7 +229,7 @@ public boolean preHandle(HttpServletRequest request, HttpServletResponse respons
           :class="{ on: startPageIndex + index - 1 == currentPageNo }"
           @click="changePage(index)"
         >
-          startPageIndex + index - 1 
+          startPageIndex + index - 1
         </a>
       </li>
       <li>
@@ -239,7 +248,7 @@ export default {
       startPageIndex: 0, //링크에서 페이지 시작 인덱스
       endPageIndex: 0, //링크에서 페이지 마지막 인덱스
       prev: false,
-      next: false
+      next: false,
     };
   },
   methods: {
@@ -284,42 +293,43 @@ export default {
     },
     changeLink(index) {
       this.$emit("update", index);
-    }
+    },
   },
   watch: {
-    currentPageNo: function() {
+    currentPageNo: function () {
       this.initUI();
     },
-    totalCnt: function() {
+    totalCnt: function () {
       this.initUI();
     },
-    recordsPerPage: function() {
+    recordsPerPage: function () {
       this.initUI();
     },
-    pagePerLink: function() {
+    pagePerLink: function () {
       this.initUI();
-    }
+    },
   },
   created() {
     if (this.currentPageNo !== undefined) {
       this.initUI();
     }
-  }
+  },
 };
 </script>
 
 <style scoped src="../../assets/css/board/pagination.css"></style>
 ```
 
-
-* 기본적으로 내가 구성한 Pagination은 한 링크당 5페이지로 구성되어 있고, 한 페이지당 10개의 게시글로 구성되어 있다.
-* next 버튼을 누르면 다음 링크로 넘어가서 첫 페이지를 보여주고, prev 버튼을 누르면 이전 링크로 넘어가서 마지막 페이지를 보여주게 설정하였다. 다만 각 버튼은 다음이나 이전 링크에 페이지가 존재해야지만 활성화 된다.
-* Pagination은 부모 컴포넌트로부터 현재 페이지 번호, 총 게시글 수, 링크당 페이지 수, 페이지당 게시글 수 데이터를 넘겨받아서 그 값을 토대로 initUI 메소드를 실행시켜 값을 계산한다.
-* 다른 페이지를 클릭하거나 링크를 이동하면 인덱스를 이벤트로 넘겨서 부모 컴포넌트의 메소드를 실행시킨다.
-* 부모 컴포넌트에서 메소드를 실행시켜 해당 페이지에 대한 결과를 반환하면, watch 속성을 통해 initUI 메소드를 다시 실행시켜 Pagination이 재정의된다.
+- 기본적으로 내가 구성한 Pagination은 한 링크당 5페이지로 구성되어 있고, 한 페이지당 10개의 게시글로 구성되어 있다.
+- next 버튼을 누르면 다음 링크로 넘어가서 첫 페이지를 보여주고, prev 버튼을 누르면 이전 링크로 넘어가서 마지막 페이지를 보여주게 설정하였다. 다만 각 버튼은 다음이나 이전 링크에 페이지가 존재해야지만 활성화 된다.
+- Pagination은 부모 컴포넌트로부터 현재 페이지 번호, 총 게시글 수, 링크당 페이지 수, 페이지당 게시글 수 데이터를 넘겨받아서 그 값을 토대로 initUI 메소드를 실행시켜 값을 계산한다.
+- 다른 페이지를 클릭하거나 링크를 이동하면 인덱스를 이벤트로 넘겨서 부모 컴포넌트의 메소드를 실행시킨다.
+- 부모 컴포넌트에서 메소드를 실행시켜 해당 페이지에 대한 결과를 반환하면, watch 속성을 통해 initUI 메소드를 다시 실행시켜 Pagination이 재정의된다.
 
 ## 0429
+
 # 검색 기능과 페이징 처리
+
 작성했던 Pagination을 이용하여 검색 기능과 검색을 통한 결과를 페이징 처리하는 기능을 구현하였다.  
 기본적으로 로그인하면 전체 결과에 대한 리스트를 보여주고, 검색창에 검색 시에만 해당하는 검색어가 게시글 제목이나 내용에 속해있는 결과를 페이징 처리하여 반환해주는 형태로 구현하였다.
 
@@ -392,7 +402,7 @@ export default {
     return {
       boardList: {},
       currentPageNo: 1,
-      searchWord: ""
+      searchWord: "",
     };
   },
   methods: {
@@ -401,7 +411,7 @@ export default {
       try {
         const param = {
           searchWord: this.searchWord.trim(),
-          currentPageNo: 1
+          currentPageNo: 1,
         };
 
         if (param.searchWord === "") {
@@ -421,7 +431,7 @@ export default {
 
         const param = {
           searchWord: this.searchWord,
-          currentPageNo: this.currentPageNo
+          currentPageNo: this.currentPageNo,
         };
 
         if (param.searchWord === "") {
@@ -434,33 +444,37 @@ export default {
       } catch (error) {
         console.log(error.response);
       }
-    }
+    },
   },
   created() {
     this.getBoardListMethod();
   },
   components: {
-    Pagination
-  }
+    Pagination,
+  },
 };
 </script>
 
 <style scoped src="../../assets/css/board/boardList.css"></style>
 ```
-* 검색어를 입력하고 검색 버튼을 누르거나 엔터키를 누르면 getBoardListMethod를 실행시킨다.
-* 검색을 한 경우에는 기본적으로 첫 번째 페이지를 보여줘야 하기 때문에 현재 페이지 번호를 1번으로 고정해서 param으로 사용하였고, 검색어가 없을 경우에는 전체 결과를 반환하는 getBoardList를, 검색어가 있을 경우에는 검색어로 결과를 찾는 getBoardSearchList 메소드를 실행해서 결과를 boardList 데이터에 넣었다.
-* 전체 결과이든, 검색 결과이든 페이지를 전환하면 Pagination에서 발생한 이벤트와 payload로 전달된 인덱스를 이용해서 해당 페이지에 있는 게시글 리스트를 결과로 반환한다.
-* 검색창 상단에는 정상적으로 검색이 실행되었는지 확인을 하기 위해 검색 결과 수를 표시하고, 검색 결과의 개수가 0일 경우 검색 결과가 없다는 메시지를 화면에 보여주도록 구현하였다.
+
+- 검색어를 입력하고 검색 버튼을 누르거나 엔터키를 누르면 getBoardListMethod를 실행시킨다.
+- 검색을 한 경우에는 기본적으로 첫 번째 페이지를 보여줘야 하기 때문에 현재 페이지 번호를 1번으로 고정해서 param으로 사용하였고, 검색어가 없을 경우에는 전체 결과를 반환하는 getBoardList를, 검색어가 있을 경우에는 검색어로 결과를 찾는 getBoardSearchList 메소드를 실행해서 결과를 boardList 데이터에 넣었다.
+- 전체 결과이든, 검색 결과이든 페이지를 전환하면 Pagination에서 발생한 이벤트와 payload로 전달된 인덱스를 이용해서 해당 페이지에 있는 게시글 리스트를 결과로 반환한다.
+- 검색창 상단에는 정상적으로 검색이 실행되었는지 확인을 하기 위해 검색 결과 수를 표시하고, 검색 결과의 개수가 0일 경우 검색 결과가 없다는 메시지를 화면에 보여주도록 구현하였다.
 
 ## 0430
+
 # 게시글 세부 정보 기능
+
 게시글을 클릭하였을 때, 해당 게시물의 세부 정보를 불러와서 보여주고자 했다.  
 먼저 클릭했을 때 라우팅을 설정해야 하는데 이번에는 다른 페이지들과는 다르게 게시물 번호를 url에 포함하여 라우팅하고 싶었다.  
 이를 위해서 Dynamic Route Matching 기술을 사용했다.
 
 ## Dynamic Route Matching
-* 라우터에 path를 정의할 때 동적 세그먼트는 콜론 :으로 표시된다.
-* 경로가 일치하면, 동적 세그먼트의 값은 this.$route.params로 모든 컴포넌트에서 사용 가능해진다.
+
+- 라우터에 path를 정의할 때 동적 세그먼트는 콜론 :으로 표시된다.
+- 경로가 일치하면, 동적 세그먼트의 값은 this.$route.params로 모든 컴포넌트에서 사용 가능해진다.
 
 ```javascript
 // /router/index.js
@@ -469,8 +483,8 @@ const routes = [
     path: "/post/:boardNo",
     name: "detail",
     component: () => import("@/views/PostDetail.vue"),
-    meta: { auth: true }
-  }
+    meta: { auth: true },
+  },
 ];
 ```
 
@@ -480,15 +494,17 @@ const routes = [
 export default {
   data() {
     return {
-      boardNo: this.$route.params.boardNo
+      boardNo: this.$route.params.boardNo,
     };
-  }
+  },
 };
 </script>
 ```
-* 예를 들어, /post/123 url로 접근하게 되면 해당 페이지의 데이터로 boardNo는 123 값이 저장되어 있다.
+
+- 예를 들어, /post/123 url로 접근하게 되면 해당 페이지의 데이터로 boardNo는 123 값이 저장되어 있다.
 
 ## 0501
+
 게시글 상세 내용 확인 기능을 작성하고, 그에 맞게 화면을 디자인 했다.
 
 ```vue
@@ -555,7 +571,7 @@ export default {
   data() {
     return {
       boardNo: this.$route.params.boardNo,
-      boardInfo: {}
+      boardInfo: {},
     };
   },
   methods: {
@@ -567,25 +583,27 @@ export default {
       } catch (error) {
         console.log(error.response);
       }
-    }
+    },
   },
   created() {
     this.getBoardDetailMethod();
-  }
+  },
 };
 </script>
 
 <style scoped src="../../assets/css/post/content.css"></style>
 ```
 
-* 동적 라우팅을 통해 받은 파라미터를 api를 호출할 때 사용할 변수로 사용했다.
-* 결과 값으로 받아온 boardInfo의 속성들을 화면을 나타내는 데 적절하게 사용해서 구현하였다.
+- 동적 라우팅을 통해 받은 파라미터를 api를 호출할 때 사용할 변수로 사용했다.
+- 결과 값으로 받아온 boardInfo의 속성들을 화면을 나타내는 데 적절하게 사용해서 구현하였다.
 
 ## 0502
+
 # 좋아요 기능
+
 각 게시물에 한 회원당 한 번의 좋아요를 클릭할 수 있다.  
 좋아요는 처음에 빈 하트로 존재하고, 클릭시 하트가 채워지며 좋아요 수가 증가한다.  
-이미 좋아한 글에 다시 들어올 때는 좋아요 하트가 채워진 채로 보여지게 된다.  
+이미 좋아한 글에 다시 들어올 때는 좋아요 하트가 채워진 채로 보여지게 된다.
 
 ```vue
 <!-- template 영역 - 좋아요 부분만 제외하고는 생략 -->
@@ -614,7 +632,7 @@ export default {
   data() {
     return {
       boardNo: this.$route.params.boardNo,
-      boardInfo: {}
+      boardInfo: {},
     };
   },
   methods: {
@@ -630,19 +648,20 @@ export default {
     async clickLikeMethod() {
       try {
         const boardNo = {
-          boardNo: this.boardNo
+          boardNo: this.boardNo,
         };
         await this.clickLike(boardNo);
         await this.getBoardDetailMethod();
       } catch (error) {
         console.log(error.response);
       }
-    }
+    },
   },
   created() {
     this.getBoardDetailMethod();
-  }
+  },
 };
 </script>
 ```
-* 좋아요 숫자를 업데이트 한 후, 업데이트 결과를 화면에 다시 그려주기 위해서 게시글 세부 정보 api를 재호출한다.
+
+- 좋아요 숫자를 업데이트 한 후, 업데이트 결과를 화면에 다시 그려주기 위해서 게시글 세부 정보 api를 재호출한다.
