--- a/_posts/2021-07-06-0705-0711.md
+++ b/_posts/2021-07-06-0705-0711.md
@@ -1,12 +1,13 @@
 ---
-title: "0705-0711"
+title: "0705 - 0711"
 tag: TIL
 category: TIL
+excerpt: ""
 ---
+
 ## 0705
+
 # 패스트캠퍼스 네카라쿠배 취업스쿨 최종 합격
-
-
 
 정말 하루 종일 아무것도 손에 잡히지 않고 불안한 마음이 가득했다.  
 계속해서 핸드폰을 살피고, 언제 나올지 모른다는 생각에 하루종일 마음이 힘들었다.  
@@ -20,6 +21,7 @@ category: TIL
 이번 주에 마지막으로 친구들을 만나고, 다음 주부터 제대로 시작해서 목표하는 기업을 꼭 가고 말겠다.
 
 ## 0706 ~ 0711
+
 7개월 넘게 계속 TIL을 작성하는 습관을 들이면서, 이전에 비해 많이 성장한 개발자가 되었다.  
 이번 주는 쉬어가는 주간으로 다음 주부터 있을 네카라쿠배 교육 과정 이전에 보지 못했던 친구들도 만나고, 사람들과 시간을 보냈다.  
 아예 푹 쉬어버리니 오히려 충전이 된 것 같고, 미련없이 다음주부터 앞만 보고 달려갈 수 있을 것 같다.  
